Added two unit test on reducer

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "http-proxy-middleware": "^0.17.4",
+
     "jest": "20.0.4",
     "lodash": "^4.17.4",
     "moment": "^2.20.0",
@@ -107,9 +108,12 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "expose-loader": "^0.7.4",
     "json-server": "^0.12.1",
     "node-sass": "^4.7.2",
+    "redux-mock-store": "^1.4.0",
     "sass-loader": "^6.0.6"
   },
   "proxy": "http://localhost:3001"
